<?xml version="1.0" encoding="utf-8"?>
<navigation android:id="@id/mobile_navigation" app:startDestination="@id/navigation_dashboard"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <fragment android:label="@string/title_settings" android:name="io.tripovan.voltage.ui.settings.SettingsFragment" android:id="@id/navigation_settings">
        <action android:id="@id/action_settingsFragment_to_advancedSettingsFragment" app:destination="@id/navigation_advanced_settings" />
    </fragment>
    <fragment android:label="@string/title_expert" android:name="io.tripovan.voltage.ui.dashboard.DashboardFragment" android:id="@id/navigation_expert" />
    <fragment android:label="@string/title_expert" android:name="io.tripovan.voltage.ui.dashboard.healthreport.CompareFragment" android:id="@id/navigation_compare" />
    <fragment android:label="Health report" android:name="io.tripovan.voltage.ui.dashboard.healthreport.HealthReportFragment" android:id="@id/navigation_health" />
    <fragment android:label="Charge control" android:name="io.tripovan.voltage.ui.control.functions.ChargeControlFragment" android:id="@id/navigation_charge" />
    <fragment android:label="Engine control" android:name="io.tripovan.voltage.ui.control.functions.EngineControlFragment" android:id="@id/navigation_engine" />
    <fragment android:label="Advanced Settings" android:name="io.tripovan.voltage.ui.settings.AdvancedSettingsFragment" android:id="@id/navigation_advanced_settings" />
    <fragment android:label="@string/title_dashboard" android:name="io.tripovan.voltage.ui.dashboard.main.MainFragment" android:id="@id/navigation_dashboard">
        <action android:id="@id/action_dashboardFragment_to_statsFragment" app:destination="@id/navigation_stats" />
    </fragment>
    <fragment android:label="Stats" android:name="io.tripovan.voltage.ui.dashboard.StatsFragment" android:id="@id/navigation_stats" />
    <fragment android:label="@string/title_live" android:name="io.tripovan.voltage.ui.live.LiveFragment" android:id="@id/navigation_live" />
    <fragment android:label="@string/title_live" android:name="io.tripovan.voltage.ui.control.AdvancedControlFragment" android:id="@id/navigation_advanced_control" />
    <fragment android:label="@string/title_weak_cells" android:name="io.tripovan.voltage.ui.control.functions.WeakCellsTestFragment" android:id="@id/navigation_weak_cells" />
    <fragment android:label="@string/title_notifications" android:name="io.tripovan.voltage.ui.history.HistoryMainFragment" android:id="@id/navigation_history" />
</navigation>
